# gist

./: .flake8  .gitignore  .travis.yml  LICENSE  MANIFEST.in  Makefile  README  README.rst  bash_gist  baz.txt  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yaml
config/: pep8
etc/: gist.bash
gist/: __init__.py  client.py  gist.py  version.py
share/: gist-fzf.bash  gist-fzsl.bash  gist.bash  gist.fish  gist.zsh
tests/: conftest.py  test_cli.py  test_cli_parser.py  test_config.py  test_gist.py
tests/gnupg/: pubring.gpg  pubring.gpg~  secring.gpg  trustdb.gpg
