[metadata]
name = python-gist
version = attr: gist.version.__version__
author = Joshua Downer
author_email = joshua.downer@gmail.com
license = MIT
description = Manage github gists
long_description = file: README.rst
keywords = gist, github, git
url = http://github.com/jdowner/gist
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development
    Topic :: Software Development :: Version Control
    Topic :: Utilities
platforms = Unix, Windows

[options]
packages = gist
include_package_data = True
install_requires =
    python-gnupg>=0.4.1
    requests
tests_require =
    pytest
    pytest-black
    pytest-flake8
    pytest-pylint
    python-gnupg>=0.4.1
    requests
    responses
    tox

[options.entry_points]
console_scripts = gist = gist.client:main

[options.package_data]
* = share/*, *.rst, LICENSE

[flake8]
ignore = E123,E126,E128
max-line-length=88
